--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<meta name="baidu-site-verification" content="codeva-irCSP8JvXx" />
+	<meta name="baidu-site-verification" content="codeva-OTVROM2Z1A" />
 	<title>Title</title>
 </head>
 <body>
